# adventofcode2020

./: .gitignore  pyproject.toml
adventofcode2020/: day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day2.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py  earlyparser.py  utils.py
data/day11/: sample2.txt
data/day13/: sample2.txt
data/day8/: sample2.txt
scripts/: generate_folders.py
