[tool.poetry]
name = "adventofcode2020"
version = "0.1.0"
description = ""
authors = ["Peter Sandberg <petthosan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.4"
advent-of-code-data = "^0.8.5"
python-dotenv = "^0.15.0"
more-itertools = "^8.6.0"
pydantic = "^1.7.3"
cachetools = "^4.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
